--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -25,6 +25,7 @@
     border: 1px solid #E2E2E2;
     border-radius: 3px;
     opacity: 1;
+    // height: 400px;
 }
 
 .card-media{
@@ -33,14 +34,15 @@
     opacity: 1;
     display: flex;
     justify-content: center;
+    height: 200px;
 }
 
 .image{
-    margin: 20px auto;
+    margin: 25px auto;
 }
 
 .book-details{
-    padding: 20px 20px;
+    padding: 25px 20px;
     text-align: left;
     letter-spacing: 0px;
     opacity: 1;
