--- a/src/pages/wishlist/wishlist.scss
+++ b/src/pages/wishlist/wishlist.scss
@@ -1,5 +1,8 @@
-.all-container{
-    min-height: 80.8vh;
+.wishlist-container{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .wishlist-main{
@@ -40,6 +43,49 @@
         }
         .wishlist-item-right{
             padding: 10px;
+        }
+    }
+}
+
+
+
+
+@media only screen and (max-width:'1100px'){
+    .wishlist-main{
+        margin: 50px;
+    }
+}
+
+@media only screen and (max-width:'800px'){
+    .wishlist-main{
+        margin: 30px;
+        .wishlist-item{
+            flex-direction: column;
+            .wishlist-item-left{
+                justify-content: center;    
+            }
+            .wishlist-item-right{
+                margin-left: auto;
+            }
+        }
+    }
+    
+}
+
+@media only screen and (max-width:'600px') {
+    .wishlist-main{
+        margin: 90px 10px 10px 10px;
+        .wishlist-item{
+            flex-direction: column;
+            padding: 20px;
+            .wishlist-item-left{
+                justify-content: center;
+                padding-bottom: 20px;
+            }
+            .wishlist-item-right{
+                margin-left: auto;
+                padding-right: 0;
+            }
         }
     }
 }
