[Akshay]ADDED: styling to the preloader

--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -85,3 +85,14 @@
     }
     
 }
+
+.preloader{
+    margin: auto;
+    // position: absolute;
+    z-index: 1000;
+    min-height: 100vh;
+    background-color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
