--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -4,6 +4,7 @@
 
 .dashboard{
     min-height: 100vh;
+    overflow-x: hidden;
 }
 .main{
     padding: 0 13%;
@@ -87,12 +88,21 @@
 }
 
 .preloader{
-    margin: auto;
-    // position: absolute;
+    position: absolute;
     z-index: 1000;
-    min-height: 100vh;
-    background-color: #f5f5f5;
+    // min-height: 100vh;
+    // background-color: #f5f5f5;
     display: flex;
     justify-content: center;
     align-items: center;
+    backdrop-filter: blur(2px);
+    width:100vw;
+    height: 100vh;
+}
+
+.book-detail{
+    font-family: Roboto;
+    font-weight: bolder;
+    font-size: large;
+    padding: 15px;
 }
